--- a/inst/rmd/Treatment_Patterns.Rmd
+++ b/inst/rmd/Treatment_Patterns.Rmd
@@ -3,7 +3,7 @@ title: "Treatment characterization"
 runtime: shiny
 output: 
   flexdashboard::flex_dashboard:
-    orientation: rows
+    orientation: columns
     theme : yeti
     vertical_layout: scroll
 ---
@@ -11,50 +11,22 @@ output:
 ```{r global_packages}
 library(flexdashboard)
 library(shiny)
-library(CancerTxPathway)
+library(PathwayVisualizer)
 library(dplyr)
-library(highcharter)
-library(plotly)
-library(viridis)
-library(gridExtra)
-library(scales)
-library(hrbrthemes)
-library(ggplot2)
-library(data.table)
 ```
 
 
-Usage Patterns {data-orientation=rows}
+Usage Patterns
 ============================
 
-Column {.tabset .tabset-fade}
+Column
 ----------------------------
-
-### Treatment Pathway
-
-```{r, echo=FALSE,fig.keep='all'}
-
-nodes <- p3_data$nodes
-links <- p3_data$links
-
-networkD3::sankeyNetwork(Links = links, Nodes = nodes, Source = "source",Target = "target", Value = "value", NodeID = "name", fontSize = 12, nodeWidth = 30,sinksRight = FALSE)
-
-```
 
 ### Usage patterns of the treatment 1
 
 ```{r, echo=FALSE}
-
-
-p2 <- ggplot(p1_data, aes(x= Year,y= proportion, fill = Cohort)) + 
-  geom_area(alpha=0.6 , size=1) + 
-  labs(y="Treatment (%)") + 
-  theme_Publication() + 
-  scale_fill_Publication() + 
-  theme(axis.text.x=element_text(angle=45, hjust=1)) +
-  scale_x_continuous(breaks = unique(p1_data$Year))
-
-plotly::ggplotly(p2) %>% layout(showlegend = TRUE)
+PathwayVisualizer::plot1(p1_data,
+                         type = 'area')
 
 ```
 
@@ -62,119 +34,138 @@ plotly::ggplotly(p2) %>% layout(showlegend = TRUE)
 
 ```{r, echo=FALSE}
 
-p2 <- ggplot(p1_data, aes(x= Year,y= proportion, color = Cohort)) +
-  geom_line() + 
-  labs(y="Treatment (%)") + 
-  theme_Publication() + 
-  scale_colour_Publication() + 
-  theme(axis.text.x=element_text(angle=45, hjust=1)) +
-  scale_x_continuous(breaks = unique(p1_data$Year))
-
-plotly::ggplotly(p2) %>% layout(showlegend = TRUE)
+PathwayVisualizer::plot1(p1_data,
+                         type = 'line')
 
 ```
+
+Column
+----------------------------
 
 ### Treatment Iteration Heatmap
 
 ```{r, echo=FALSE}
 
-total <- p2_data %>% group_by(cohortName) %>% mutate(sum = sum(n)) %>% select (cohortName,sum)
-total <- unique(total)
-total$label <- paste0(total$cohortName,' \n','(n = ',total$sum,')')
-heatmapPlotData <- p2_data %>% subset(n >= minimumCellCount)
+PathwayVisualizer::plot2(p2_data,
+                         minimumCellCount)
 
-heatmapPlotData %>% highcharter::hchart(.,type="heatmap",hcaes(x = cycle,y=cohortName,value = ratio),dataLabels = list(allowOverlap = TRUE, enabled = TRUE,format = '{point.n}<br>{point.value}%'),align ='center') %>% hc_xAxis(title = list(style = list(fontSize = 14)),max = max(heatmapPlotData$cycle), tickInterval = 1,labels = list(style = list(fontSize = 14))) %>% hc_yAxis(title = list(text = 'Regimen',style = list(fontSize = 14)),labels = list(style = list(fontSize = 14))) %>% hc_colorAxis(stops = color_stops(ceiling(max(heatmapPlotData$ratio)),c("white","blue"))) %>% hc_tooltip(pointFormat = "Regimen: {point.y} <br> Cycle: {point.x} <br> Proportion: {point.value}%")
 
 ```
 
-Event Onset Timing {data-orientation=rows}
-================================
 
-Row {.tabset .tabset-fade}
---------------------------------
+Treatment Pathway
+============================
 
-### Incidence of the adverse event after each treatment iteration - regression graph
+Column {data-width=650}
+----------------------------
 
-```{r, echo=FALSE,fig.keep='all'}
-
-plotData <- p4_data %>% mutate(label = paste(event,'/',total))
-Percent_labeled <- plotData %>% arrange(cohortName, cycle) %>% mutate(label = paste0(event,' / ',total,' (',ifelse(event != 0,paste0(round(event/total*100,1),'%'),' - '),')')) %>% arrange(cohortName, cycle) %>% mutate(ratio = round(ratio*100,1))
-Percent_labeled <- na.omit(Percent_labeled) %>% subset(event != 0)
-
-p1 <- ggplot(Percent_labeled) +
-  theme_bw() +
-  geom_point(size = 2, aes(x = cycle, y = ratio, group = cohortName, color = cohortName, fill = cohortName)) +
-  geom_smooth(size = 1.0, method = 'lm', aes(x = cycle, y = ratio, group = cohortName, color = cohortName, fill = cohortName)) +
-  scale_fill_Publication() +
-  scale_colour_Publication() +
-  facet_wrap(~cohortName,ncol = 4) +
-  theme(legend.position='none',
-        plot.title = element_text(size=20, face="bold", vjust=2),
-        axis.title.x = element_blank(),
-        axis.title.y = element_text(size=13),
-        axis.text = element_blank(),
-        axis.ticks.x = element_blank(),
-        axis.ticks.y = element_blank(),
-        panel.border = element_blank(),
-        panel.grid.major = element_blank(),
-        panel.grid.minor = element_blank()) +
-  labs(x = 'Iteration Number of treatment',y = 'Incidence Rate') +
-  geom_text(aes(x = cycle, y = ratio, label = paste0(ratio,'%'),size = 2))
-
-plotly::ggplotly(p1,originalData = FALSE) %>% layout(showlegend = TRUE) %>%
-  style(textposition = 'right')
-```
-
-### Incidence of the adverse event after each treatment iteration - histogram 
+### Treatment Pathway
 
 ```{r, echo=FALSE}
 
-# plot #2 - number of Incidence
-
-plotData <- p4_data %>% mutate(label = paste(event,'/',total))
-Percent_labeled <- plotData %>% arrange(cohortName, cycle) %>% mutate(label = paste0(event,' / ',total,' (',ifelse(event != 0,paste0(round(event/total*100,1),'%'),' - '),')')) %>% arrange(cohortName, cycle) %>% mutate(ratio = round(ratio*100,1))
-Percent_labeled <- na.omit(Percent_labeled) %>% subset(event != 0)
-
-p2 <- ggplot(Percent_labeled) +
-  geom_bar(aes(x = cycle, group = cohortName,y = ratio, fill = cohortName),stat = 'identity',show.legend = FALSE) + theme_Publication() + scale_fill_Publication() + scale_colour_Publication() + facet_wrap(~cohortName,ncol = 4) + theme(
-        panel.border = element_blank(),
-        panel.grid.major = element_blank(),
-        panel.grid.minor = element_blank()) +
-  ylim(0,100) + scale_x_reverse(breaks = c(1:max(Percent_labeled$cycle))) + geom_text(aes(x = cycle,y = ratio, label = label), show.legend = FALSE, vjust = 0.2,hjust = -0.05, size = 3.5, position = position_dodge(width=0.6)) + coord_flip() + xlab("Cycle") +
-  ylab("")
-
-ggplotly(p2) %>% style(textposition = 'middle right')
-
+PathwayVisualizer::plot3(p3_data[[1]])
 
 ```
 
-### Adverse event onset timing after first treatment {data-vertical_layout=scroll}
+Column {data-width=350}
+----------------------------
+
+### Pathway raw data 
 
 ```{r, echo=FALSE,fig.keep='all'}
 
+pathways <- p3_data[[1]]$pathways
+knitr::kable(pathways)
 
-plotdata <- as.data.frame(data.table::rbindlist(lapply(1:nrow(p5_data),function(i){cohortName <- rep(p5_data[i,]$cohortName,p5_data[i,]$n)
-dateDiff <- rep(p5_data[i,]$dateDiff,p5_data[i,]$n)
-targerRecord <- data.frame(cohortName,dateDiff)
-return(targerRecord)})))
+```
 
-plotdata <- plotdata %>% 
-  mutate(category = ifelse(dateDiff<1,'d1',ifelse(dateDiff<=7,'d2-d8',ifelse(dateDiff<=14,'d9-d15',ifelse(dateDiff<=21,'d16-d22',ifelse(dateDiff<=29,'-d30','>d30'))))))
+Treatment Pathway - adjuvant
+============================
 
-plotdata$category <- factor(plotdata$category,levels = c('d1','d2-d8','d9-d15','d16-d22','-d30','>d30'))
+Column {data-width=650}
+----------------------------
 
-p <- ggplot(plotdata,aes(x=cohortName, y=dateDiff)) +
-  geom_violin(size=0.2,scale = 'width') +
-  ggbeeswarm::geom_quasirandom(size = 1,aes(color = category))+
-  scale_color_viridis(discrete=TRUE) + theme_ipsum() +
-  theme(
-    legend.position= 'right',legend.title=element_blank()
-  ) +
-  coord_flip() +
-  xlab("") +
-  ylab("Time from discharge (days)")
+```{r, eval = setting}
+knitr::asis_output("### Treatment Pathway - adjuvant")
+```
 
-plotly::ggplotly(p)
+```{r, echo=FALSE,fig.keep='all',results = 'asis', eval = setting}
+if(setting){
+PathwayVisualizer::plot3(p3_data[[3]])
+}
+```
+
+Column {data-width=350}
+----------------------------
+
+```{r, eval = setting}
+knitr::asis_output("### Pathway raw data - adjuvant")
+```
+
+```{r, echo=FALSE,fig.keep='all',results = 'asis', eval = setting}
+if(setting){
+  pathways_a <- p3_data[[3]]$pathways
+  knitr::kable(pathways_a)
+}
+```
+
+Treatment Pathway - neoadjuvant / palliative care
+============================
+
+Column {data-width=650}
+----------------------------
+
+```{r, eval = setting}
+knitr::asis_output("### Treatment Pathway - neoadjuvant / palliative care")
+```
+
+```{r, echo=FALSE,fig.keep='all',results = 'asis', eval = setting}
+if(setting){
+PathwayVisualizer::plot3(p3_data[[2]])
+}
+```
+
+Column {data-width=350}
+----------------------------
+
+```{r, eval = setting}
+knitr::asis_output("### Pathway raw data - neoadjuvant")
+```
+
+```{r, echo=FALSE,fig.keep='all',results = 'asis', eval = setting}
+if(setting){
+  pathways_na <- p3_data[[2]]$pathways
+  knitr::kable(pathways_na)
+}
+```
+
+Event Onset Timing
+================================
+
+Column {.tabset .tabset-fade }
+--------------------------------
+
+### Regression Plot
+
+```{r, echo=FALSE,fig.keep='all'}
+
+PathwayVisualizer::plot4(p4_data,type = 'regression')
+
+```
+
+### Incidence Histogram
+
+```{r, echo=FALSE}
+
+PathwayVisualizer::plot4(p4_data,type = 'histogram')
+
+```
+
+### Onset Date
+
+```{r, echo=FALSE,fig.keep='all'}
+
+PathwayVisualizer::plot5(p5_data)
 
 ```   
 
